# oat

./: Cargo.toml  README.md  config.example
.github/workflows/: release.yml
scripts/: install.sh  release.sh
src/: main.rs
src/commands/: currency.rs  generate.rs  hash.rs  mod.rs  password.rs  qr.rs  ssh.rs  update.rs
