[package]
name = "oat"
version = "0.1.0"
edition = "2021"
authors = ["Paul Artjomow <me@prixix.com / paul-artjomow@hotmail.com>"]
repository = "https://github.com/Prixix/oat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seahorse = "2.2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"
futures = "0.3"
self_update = "0.39"
semver = "1.0"
dirs = "5.0"
chrono = "0.4"