[package]
name = "oat"
version = "0.1.2"
edition = "2021"
description = "A versatile CLI tool for generating content, hashing, currency conversion, password generation, and QR codes"
authors = ["Paul Artjomow <paul-artjomow@hotmail.com>"]
repository = "https://github.com/Prixix/oat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seahorse = "2.2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"
futures = "0.3"
self_update = "0.39"
semver = "1.0"
dirs = "5.0"
chrono = "0.4"
rand = "0.8"
qrcode = "0.14"
image = "0.24"